Sistema de permanencia permanente configurado

--- a/backend/microservice/src/main/resources/application.properties
+++ b/backend/microservice/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:h2:file:./data/usersdb;INIT=RUNSCRIPT FROM './src/main/resources/schema.sql'
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
