--- a/backend/microservice/src/main/resources/application.properties
+++ b/backend/microservice/src/main/resources/application.properties
@@ -1,5 +1,15 @@
-spring.datasource.url=jdbc:h2:file:./data/usersdb;INIT=RUNSCRIPT FROM './src/main/resources/schema.sql'
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# the application itself
+server.port = 8080
+
+# the datasource
+spring.datasource.url=jdbc:h2:/tmp/user.db
+spring.datasource.driverClassName = org.h2.Driver
+
+# jpa/hibernate
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
+
+logging.level.root=INFO
+logging.path = /var/log
