--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,9 +4,8 @@ WORKDIR /app
 
 COPY . .
 
-RUN npm install -g @angular/cli@latest && \ 
-    npm install && \
-    npm run build
+RUN npm install
+RUN npm run build
 
 FROM nginx:alpine
 
