Unido docker frontend y backend

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,10 +1,9 @@
-	upstream docker-web {
-    	server backend:80;
+	upstream api {
+    	server backend:8080;
 	}
 	server {
 	  include /etc/nginx/extra-conf.d/*.conf;
-	  
-	  listen 80;
+	  listen 4200;
 	  server_name frontend;
 		
 	  location / {
@@ -12,5 +11,12 @@
 		index index.html index.htm;
 		try_files $uri $uri/ /index.html =404;
 	  }  
+	  location /api {
+		proxy_pass http://api$request_uri/;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_redirect off;
+	  }
 	}
 	
