--- a/backend/microservice/src/main/resources/application.properties
+++ b/backend/microservice/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
 
 logging.level.root=INFO
 logging.path = /var/log
+
+#jwt properties
+microservices.app.jwtSecret= code
+microservices.app.jwtExpirationMs= 86400000
