--- a/backend/microservice/pom.xml
+++ b/backend/microservice/pom.xml
@@ -52,6 +52,7 @@
 	</dependencies>
 
 	<build>
+		<defaultGoal>install</defaultGoal>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
