--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
             context: ./backend/microservice
         ports:
             - "8080:8080"
+    backend-notes:
+        image: backend-notes
+        container_name: backend-notes
+        build:
+            context: ./backend-notes/microservice
+        ports:
+            - "8081:8081"
     frontend:
         image: frontend
         container_name: frontend  
