--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,7 @@
-	upstream api {
+	upstream users {
     	server backend:8080;
+	}
+	upstream notes {
 		server backend-notes:8081;
 	}
 	server {
@@ -12,8 +14,15 @@
 		index index.html index.htm;
 		try_files $uri $uri/ /index.html =404;
 	  }  
-	  location /api {
-		proxy_pass http://api$request_uri/;
+	  location /users {
+		proxy_pass http://users$request_uri/;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_redirect off;
+	  }
+		location /notes {
+		proxy_pass http://notes$request_uri/;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-NginX-Proxy true;
