Docker for new microservice

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.9"
 services:
-    backend:
-        image: backend
-        container_name: backend
+    backend-users:
+        image: backend-users
+        container_name: backend-users
         build:
-            context: ./backend/microservice
+            context: ./backend-usuarios/microservice
         ports:
             - "8080:8080"
     backend-notes:
@@ -14,6 +14,13 @@ services:
             context: ./backend-notes/microservice
         ports:
             - "8081:8081"
+    backend-login:
+        image: backend-login
+        container_name: backend-login
+        build:
+            context: ./backend-login/microservice
+        ports:
+            - "8082:8082"
     frontend:
         image: frontend
         container_name: frontend  
@@ -22,4 +29,7 @@ services:
         ports:
             - "4200:4200"
         depends_on:
-            - backend 
+            - backend-users 
+            - backend-login
+            - backend-notes
+
