--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,9 +1,15 @@
 	upstream users {
-    	server backend:8080;
+    	server backend-users:8080;
 	}
+	
 	upstream notes {
 		server backend-notes:8081;
 	}
+
+	upstream users/auth {
+		server backend-login:8082;
+	}
+
 	server {
 	  include /etc/nginx/extra-conf.d/*.conf;
 	  listen 4200;
