--- a/backend-login/microservice/src/main/resources/application.properties
+++ b/backend-login/microservice/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port = 8082
 
 # the datasource
-spring.datasource.url=jdbc:h2:/tmp/user.db
+spring.datasource.url=jdbc:h2:/tmp/userLogin.db
 spring.datasource.driverClassName = org.h2.Driver
 
 # jpa/hibernate
