--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,7 +6,7 @@
 		server backend-notes:8081;
 	}
 
-	upstream users/auth {
+	upstream auth {
 		server backend-login:8082;
 	}
 
@@ -20,6 +20,13 @@
 		index index.html index.htm;
 		try_files $uri $uri/ /index.html =404;
 	  }  
+	  location /auth {
+		proxy_pass http://users$request_uri/;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_redirect off;
+	  }
 	  location /users {
 		proxy_pass http://users$request_uri/;
         proxy_set_header X-Real-IP $remote_addr;
