--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
             context: ./backend/microservice
         ports:
             - "8080:8080"
+        expose:
+            - 8080
     backend-notes:
         image: backend-notes
         container_name: backend-notes
@@ -14,6 +16,8 @@ services:
             context: ./backend-notes/microservice
         ports:
             - "8081:8081"
+        expose:
+            - 8081
     frontend:
         image: frontend
         container_name: frontend  
@@ -23,3 +27,4 @@ services:
             - "4200:4200"
         depends_on:
             - backend 
+            - backend-notes
