Securizacion en tres microservicios

--- a/backend-login/microservice/src/main/resources/application.properties
+++ b/backend-login/microservice/src/main/resources/application.properties
@@ -15,5 +15,5 @@ logging.level.root=INFO
 logging.path = /var/log
 
 #jwt properties
-microservices.app.jwtSecret= code
+microservices.app.jwtSecret= microservices
 microservices.app.jwtExpirationMs= 86400000
