--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,7 +21,7 @@
 		try_files $uri $uri/ /index.html =404;
 	  }  
 	  location /auth {
-		proxy_pass http://users$request_uri/;
+		proxy_pass http://auth$request_uri/;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-NginX-Proxy true;
