--- a/backend-usuarios/microservice/pom.xml
+++ b/backend-usuarios/microservice/pom.xml
@@ -15,6 +15,12 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	<repositories>
+    	<repository>
+        	<id>Palantir</id>
+        	<url>https://dl.bintray.com/palantir/releases/</url>
+    	</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,8 +57,12 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.6</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.palantir.docker.compose</groupId>
+    		<artifactId>docker-compose-rule-junit4</artifactId>
+    		<version>0.32.0</version>
+			</dependency>
 	</dependencies>
 
 	<build>
